--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       </form>
       <div class="groceryContainer">
         <div class="groceryLists">
-          <article class="groceryItem">
-            <p class="title">item</p>
+          <!-- <article class="groceryItem"> -->
+          <!-- <p class="title">item</p>
             <div class="btnContainer">
               <button type="button" class="edit">
                 <i class="fas fa-edit">e</i>
@@ -25,8 +25,8 @@
               <button type="button" class="delete">
                 <i class="fas fa-trash">d</i>
               </button>
-            </div>
-          </article>
+            </div> -->
+          <!-- </article> -->
         </div>
         <button type="button" class="clearBtn">clear items</button>
       </div>
