local storage implementation

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <form class="grocery-form">
         <p class="alert"></p>
         <h2>Grocery</h2>
-        <input type="text" name="" id="input" placeholder="egg" />
+        <input type="text" name="" id="input" placeholder="e.g. Banana" />
         <button type="submit" class="submit">submit</button>
       </form>
       <div class="groceryContainer">
